refactor(services): enhance service layer logic and resolve compiler warnings
- Polish stream processing and null safety checks across core domain services

- Refine error handling and exception mapping in GlobalExceptionHandler